--- a/package.json
+++ b/package.json
@@ -6,15 +6,26 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.1",
+    "bootstrap": "^5.3.2",
+    "glyphicons": "^0.2.0",
+    "html-react-parser": "^5.0.6",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "apiServer": "json-server --watch db.json --port 5000",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
